--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-14  Neil Booth  <neil@daikokuya.co.uk>
+
+	PR preprocessor/7526
+	* cpplib.c (run_directive): Kludge so _Pragma dependency works.
+
 2002-08-14  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* doc/invoke.texi (-a): Remove documentation.
