--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/_Pragma3.c: New test.
+
 2002-08-13  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/template/inherit3: New test.
