--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-14  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (LOOSE_WARN): Add -fno-common.
+	* c-common.h (constant_string_class_name): Add missing extern.
+
 2002-08-15  Neil Booth  <neil@daikokuya.co.uk>
 
 	PR preprocessor/7358
