--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/tls/diag-3.c: Fix expected message strings.
+
 2002-08-14  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/_Pragma3.c: New test.
