--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-08-14  Richard Henderson  <rth@redhat.com>
 
+	* ggc-page.c (RTL_SIZE): New.
+	(extra_order_size_table): Add specializations for 2 and 10 rtl slots.
+	* rtl.def (BARRIER, NOTE): Pad to 9 slots.
+
+2002-08-14  Richard Henderson  <rth@redhat.com>
+
 	* calls.c: Include target.h.
 	* Makefile.in (calls.o): Update.
 
