--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/7598
+	* typeck.c (build_unary_op): Fold offsetof idiom. Fixes
+	regression caused by my 2002-08-08 patch.
+
 2002-08-13  Mark Mitchell  <mark@codesourcery.com>
 
 	* decl.c (pushdecl_class_level): Honor requests to bind names to
