--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/offsetof1.C: New test.
+
 2002-08-14  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/tls/diag-3.c: Fix expected message strings.
