--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-15  David Edelsohn  <edelsohn@gnu.org>
+
+	* rs6000.c (output_mi_thunk): Return to function section on
+	TARGET_ELF.
+
+	* rs6000-c.c (rs6000_cpu_cpp_builtins): Define __PPC405__ if PPC405.
+
 2002-08-15  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (legitimize_address): Optimize loading
