--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* loop.c (scan_loop, move_movables, count_one_set): Cast to avoid
+	signed/unsigned warnings.
+
+	* regclass.c (init_reg_sets_1, choose_hard_reg_mode,
+	record_reg_classes): Likewise.
+
+	* reload.c (reload_inner_reg_of_subreg, push_reload,
+	find_reloads_address_1): Likewise.
+
 2002-08-15  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.c (output_mi_thunk): Return to function section on
