--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-08-15  Steve Ellcey  <sje@cup.hp.com>
+
+	* gcc/unwind.h (_Unwind_Ptr): Make 64 bits on IA64 HP-UX.
+	(_Unwind_Internal_Ptr): 32 bit version for use in
+	read_encoded_value_with_base.
+	* gcc/unwind-pe.h (read_encoded_value_with_base): Use
+	_Unwind_Internal_Ptr instead of _Unwind_Ptr in order to get the
+	right size.
+
 2002-08-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* loop.c (scan_loop, move_movables, count_one_set): Cast to avoid
