--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,23 @@
+2002-08-15  Neil Booth  <neil@daikokuya.co.uk>
+
+	PR preprocessor/7358
+	PR preprocessor/7357
+	PR preprocessor/7526
+	* cppfiles.c (stack_include_file): Ignore main file if
+	appropriate.  Correct test of whether a dependency should
+	be output.
+	* cppinit.c (init_dependency_output): Ignore main file
+	for SUNPRO_DEPENDENCIES.
+	(struct lang_flags): Rename trigraphs std.
+	(set_lang): Update.
+	* cpplib.c (run_directive): Kludge so _Pragma dependency works.
+	* cpplib.h (struct cpp_options): New members.
+	* cppmacro.c (collect_args): Flag whether to swallow a possible
+	future comma pasted with varargs.
+	(replace_args): Use this flag.
+	* doc/cpp.texi: Update varargs extension documentation.
+	* doc/cppenv.texi: Update.
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
