--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/typeof-1.c: New test.
+	* g++.dg/ext/typeof2.C: New test.
+
 2002-08-15  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/other/offsetof1.C: New test.
