--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libiberty/configure: Reverted unintended yesterday's check in.
+
 2002-08-14  Alexandre Oliva  <aoliva@redhat.com>
 
 	* boehm-gc/configure, libf2c/configure: Rebuilt.
