--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-15  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (LOOSE_WARN): Remove -fno-common.
+	(NOCOMMON_FLAG): New substitution point.
+	(GCC_WARN_CFLAGS): Include it.
+	* configure.in (ac_checking): Set nocommon_flag.
+	(nocommon_flag): New substitution point.
+
 2002-08-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* c-tree.h (skip_evaluation): Move declaration...
