--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,22 @@
+2002-08-15  Danny Smith  <dannysmith@users.sourceforge.net>
+            Benjamin Kosnik  <bkoz@redhat.com>
+	
+	* include/bits/istream.tcc (basic_istream::ignore): Use sbumpc,
+	not snextc.
+	* testsuite/27_io/narrow_stream_objects.cc (test10): Add.
+
+2002-08-15  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* config/os/newlib/ctype_inline.h (is): Don't offset _M_table.
+	(scan_is): Use this->is.
+	(scan_not): Likewise.
+	
+2002-08-15  Rick Danos  <rdanos@hotmail.com>
+
+	PR libstdc++/7461
+	* config/os/newlib/ctype_noninline.h (classic_table): Add offset.
+	* config/os/newlib/ctype_inline.h (is): Use static_cast.
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
