--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-16  Aldy Hernandez  <aldyh@redhat.com>
+
+	* MAINTAINERS: Add self to rs6000 vector extensions.
+
 2002-08-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* libiberty/configure: Reverted unintended yesterday's check in.
