* doc/install.texi (*-ibm-aix*): Explain AIX shared object versioning.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56380 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,8 @@
-2002-07-30  Andrew Haley  <aph@redhat.com>
+2002-08-16  David Edelsohn  <edelsohn@gnu.org>
+
+	* doc/install.texi (*-ibm-aix*): Explain AIX shared object versioning.
+
+2002-08-16  Andrew Haley  <aph@redhat.com>
 
 	* tree-inline.c: Add includes for Java inliner.
 	(remap_decl): Don't handle anonymous types for Java.
