--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-08-16  David Edelsohn  <edelsohn@gnu.org>
+
+	* collect2.c (is_ctor_dtor): Add other possible JOINER values.
+
+	* config/rs6000/rs6000.c (output_mi_thunk): Return to function
+	section on TARGET_ELF.
+
+	* doc/install.texi (*-ibm-aix*): Explain AIX shared object versioning.
+	(Binaries): Update Bull Freeware URL.
+
 2002-08-15  Neil Booth  <neil@daikokuya.co.uk>
 
 	PR preprocessor/7358
