--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-16  H.J. Lu <hjl@gnu.org>
+
+	* lib/libjava.exp (gcc_version): Removed.
+	(libgcj_jar): New.
+	(libjava_init): Set libgcj_jar with tcl glob.
+	(libjava_arguments): Use libgcj_jar.
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
