--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-16  Sylvain Pion <pion@cs.nyu.edu>
+
+	* doc/invoke.texi: Fix typo.
+
 2002-08-16  David Edelsohn  <edelsohn@gnu.org>
 
 	* doc/install.texi (*-ibm-aix*): Explain AIX shared object versioning.
