--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -2109,7 +2109,7 @@ To suppress this warning cast the expression to @samp{void}.
 
 @item -Wunused
 @opindex Wunused
-All all the above @option{-Wunused} options combined.
+All the above @option{-Wunused} options combined.
 
 In order to get a warning about an unused function parameter, you must
 either specify @samp{-W -Wunused} or separately specify
