--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-16  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/install.texi (Final installation): Replace links to individual
+	build status pages with a link to a common page that lists them all.
+
 2002-08-16  Sylvain Pion <pion@cs.nyu.edu>
 
 	* doc/invoke.texi: Fix typo.
