--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-16  Tom Tromey  <tromey@redhat.com>
+
+	* gcj.texi (Class Initialization): Mention class initialization of
+	arrays.
+
 2002-07-30  Andrew Haley  <aph@cambridge.redhat.com>
 
 	* Make-lang.in (java-tree-inline.o): New.
