* semantics.c (finish_then_clause): Remove redundant assignment.         (finish_if_stmt, begin_switch_stmt, finish_switch_stmt): Move the         extra binding level outside the if/switch statement.         (finish_while_cond, finish_for_cond): Rewrite complex condition         into the loop body.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56402 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-15  Jason Merrill  <jason@redhat.com>
+
+	* semantics.c (finish_then_clause): Remove redundant assignment.
+	(finish_if_stmt, begin_switch_stmt, finish_switch_stmt): Move the
+	extra binding level outside the if/switch statement.
+	(finish_while_cond, finish_for_cond): Rewrite complex condition
+	into the loop body.
+
 2002-08-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* parse.y (sizeof, alignof, typeof): New non-terminals to
