--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-17  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/t-coff, config/mips/t-elf, config/mips/t-isa3264,
+	config/mips/t-r3900 (MULTILIB_MATCHES): Define.
+	* config/mips/mips.h (ASM_SPEC): Use %(endian_spec).
+
 2002-08-16  Stan Shebs  <shebs@apple.com>
 
 	* c-common.c (cb_register_builds): Define __NEXT_RUNTIME__
