c-decl.c (flexible_array_type_p): New function.
	* c-decl.c (flexible_array_type_p): New function.
	(grokdeclarator, finish_struct): Use it.
	* doc/extend.texi: Document constraints on use of structures with
	flexible array members.

testsuite:
	* gcc.dg/c90-flex-array-1.c, gcc.dg/c99-flex-array-3.c,
	gcc.dg/c99-flex-array-4.c: New tests.

From-SVN: r56411

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-17  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* c-decl.c (flexible_array_type_p): New function.
+	(grokdeclarator, finish_struct): Use it.
+	* doc/extend.texi: Document constraints on use of structures with
+	flexible array members.
+
 2002-08-17  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/mips/t-coff, config/mips/t-elf, config/mips/t-isa3264,
