--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-18  Neil Booth  <neil@daikokuya.co.uk>
+
+	PR preprocessor/7602
+	* cppinit.c (path_include): Treat the system environment
+	variables as being cxx_aware.
+
 2002-08-17  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* c-decl.c (flexible_array_type_p): New function.
