--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-08-18  H.J. Lu  (hjl@gnu.org)
+
+	* config.gcc (*-*-linux*): Set extra_parts="crtbegin.o
+	crtbeginS.o crtbeginT.o crtend.o crtendS.o", gas=yes and
+	gnu_ld=yes.
+	(alpha*-*-linux*, cris-*-linux*, i370-*-linux*,
+	i[34567]86-*-linux*, x86_64-*-linux*, mips*-*-linux*,
+	s390-*-linux*, s390x-*-linux*, sparc-*-linux*, sparc64-*-linux*,
+	xtensa-*-linux*): Remove setting extra_parts, gas, and gnu_ld
+	here.
+	(cris-*-linux*): Remove setting thread_file here.
+
 2002-08-18  Neil Booth  <neil@daikokuya.co.uk>
 
 	PR preprocessor/7602
