--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-19  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.c (rs6000_emit_set_const): Inline
+	multi-instruction SImode constant.  Add REG_EQUAL note.
+	* config/rs6000/rs6000.md (movsi splitter): Use
+	rs6000_emit_set_const. 
+
 2002-08-19  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* tree-inline.c (initialize_inlined_parameters): Wrap variable in
