--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-19  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* genautomata.c (output_translate_vect, output_state_ainsn_table,
+	output_min_issue_delay_table): Mark variable with ATTRIBUTE_UNUSED
+	in output file.
+	(output_internal_min_issue_delay_func): Initialize variable in
+	output file.
+
 2002-08-19  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (GCC_FOR_TARGET): Prepend STAGE_CC_WRAPPER.
