2002-08-20  Michael Koch  <konqueror@gmx.de>
	* java/net/URISyntaxException.java: New file.
	* java/net/SocketTimeoutException.java: New file.
	* java/net/PortUnreachableException.java: New file.
	* Makefile.am: Updated.
	* Makefile.in: Rebuilt.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56452 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-20  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/URISyntaxException.java: New file.
+	* java/net/SocketTimeoutException.java: New file.
+	* java/net/PortUnreachableException.java: New file.	
+	* Makefile.am: Updated.
+	* Makefile.in: Rebuilt.
+
 2002-08-18  Mark Wielaard  <mark@klomp.org>
 
 	Thanks to Vladimir Puskas <vpuskas@eunet.yu>
