--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-20  Andreas Jaeger  <aj@suse.de>
+
+	PR target/7531:
+	* doc/invoke.texi (i386 and x86-64 Options): Document -mcmodel.
+
 2002-06-24  Jeff Law <law@redhat.com>
 
 	* flow.c (propagate_one_insn): When removing an insn
