--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-19  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* configure.in (libtool_VERSION): Update to 5:1:0.
+	* configure: Regenerate.
+
 2002-08-15  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/ext/stdio_filebuf.h (stdio_filebuf): Explicitly set
