--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 20 16:49:40 2002  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* where.c (ffewhere_track): Remove impossible if-then clause.
+
 Thu Aug  8 10:06:14 2002  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* f/Make-lang.in (f.mostlyclean): Remove coverage files.
